ADD: dogsignup 추가

--- a/accounts/templates/accounts/password.html
+++ b/accounts/templates/accounts/password.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} 
- {% block content %}
+{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} {%
+block content %}
 <div class="password">
   <form action="" method="POST" class="password-form">
     {% csrf_token %} {% bootstrap_form form %}
