UPDATE : 강아지 등록 페이지 성별, 크기 선택 dropdown으로 변경

--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -11,8 +11,7 @@
   <div>
 
     <a class="" href="{%  url 'accounts:logout' %}"
-      >로그아웃</a
-    >
+      >로그아웃</a>
   <!-- 회원인 경우에만 강아지 등록 할 수 있게-->
   <a class="btn btn-primary " href="{% url 'accounts:dogsignup' %}">강아지 등록</a>
 </div>
