--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -5,7 +5,10 @@
 {% block content %}
 
 <div class=" d-flex m-4 py-4 px-2 ">
-
+  <form method='search' action="{% url "revies:result" %}">
+    {% csrf_token %}
+    <input type="" name="search_button" value="검색" style="background-color: rgb(242, 242, 242)">
+    </form>
 
   {% comment %} 리뷰 글 반복 {% endcomment %}
   <div>
