--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,7 +49,7 @@
             <a class="nav-link" href="{% url 'reviews:index' %}">멍스타그램</a>
           </li>
           <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'schedules:index' %}">일정관리</a>
+            <a class="nav-link" href="{% url 'schedules:calendar' %}">일정관리</a>
           </li>
           <li class="nav-item me-4 nav1-text">
             <a class="nav-link" href="{% url 'walkings:index' %}">산책나가기</a>
