UPDATE : schedules CRUD 기능 모달 이벤트 추가 기능 파트 구현

--- a/schedules/templates/schedules/aside.html
+++ b/schedules/templates/schedules/aside.html
@@ -1,3 +1,4 @@
+<a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
 <!-- Sidebar menu-->
 <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
     <aside class="app-sidebar">
