--- a/static/CSS/hospital.css
+++ b/static/CSS/hospital.css
@@ -63,7 +63,29 @@
   width: 100%;
   padding: 30px 0;
   display: inline-block;
+  justify-content: center;
   margin-top: 40px;
   margin-left: 0%;
   border-top: 1px solid #ebebeb;
+}
+.s21_page ul{
+  display:flex;
+  justify-content: center;
+  list-style: none;
+}
+.s21_page ul li a{
+  float: left;
+  font-size: 15px;
+  padding: 12px 18px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+  color: #666;
+}
+.s21_page ul li a.active{
+  background-color: #333;
+  border: 1px solid #333;
+  color: #fff;
+  font-weight: bold;
 }
