--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -11,7 +11,7 @@
     {% csrf_token %}
     <input type="" name="search_button" value="검색" style="background-color: rgb(242, 242, 242)">
   </form>
-  <a href='{% url 'reviews:create' %}'><button type="button" class="btn btn-primary">글쓰기</button></a>
+  <a href="{% url 'reviews:create' %}"><button type="button" class="btn btn-primary">글쓰기</button></a>
   {% comment %} 리뷰 글 반복 {% endcomment %}
   <div>
     <ul class="list-group list-group-flush">
