--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -1,38 +1,34 @@
-{% extends 'base.html' %} 
-{% load django_bootstrap5 %} 
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
 {% block content %}
-{% load static %}
+    {% load static %}
+    <div class="row text-center m-5">
+        <!-- 회원인 경우 보이는 화면 -->
+        <!-- 회원인 경우에만 강아지 등록 할 수 있게-->
+            {% if user.is_authenticated %}
+                <div>
+                    <p class="offcanvas-title" id="offcanvasLightNavbarLabel"> 안녕하세요,
+                    <br/>
+                    <a href="{% url 'accounts:profile' user %}" class="name ">{{ request.user }}</a>
+                    님!
+                </p>
+              
+                <a class="m-5" href="{% url 'accounts:logout' %}">로그아웃</a>
+                <a class="btn btn-primary" href="{% url 'accounts:dogsignup' %}">강아지 등록</a>
+            </div>
+            <!-- 회원정보 수정 -->
+                <a href="{% url 'accounts:update' user.pk %}">회원 정보 수정</a>
 
-<div class="row text-center mt-5">
-
-  <!-- 회원인 경우 -->
-
-  {% if user.is_authenticated %}
-  <div>
-
-    <a class="" href="{%  url 'accounts:logout' %}"
-      >로그아웃</a>
-  <!-- 회원인 경우에만 강아지 등록 할 수 있게-->
-  <a class="btn btn-primary " href="{% url 'accounts:dogsignup' %}">강아지 등록</a>
-</div>
-
-
-  <!-- 회원이 아닌 경우 -->
-  {% else %}
-  <div>
-    <a class="" href="{%  url 'accounts:login' %}"
-    >로그인</a
-  >
-    <p class="mt-5">회원이 아니신가요?</p>
-    <div class="form d-flex justify-content-center my-3">
-      <a class="btn btn-primary" href="{%  url 'accounts:signup' %}"
-        >회원가입</a
-      >
-      <a class="btn btn-outline-primary" href="{%  url 'accounts:index' %}"
-        >비회원으로 계속하기</a
-      >
-    </div>
-  </div>
-</div>
-{% endif %}
+            <!-- 회원이 아닌 경우 보이는 화면 -->
+        {% else %}
+            <div>
+                <a class="" href="{% url 'accounts:login' %}">로그인</a>
+                <p class="mt-5">회원이 아니신가요?</p>
+                <div class="form d-flex justify-content-center my-3">
+                    <a class="btn btn-primary" href="{% url 'accounts:signup' %}">회원가입</a>
+                    <a class="btn btn-outline-primary" href="{% url 'accounts:index' %}">비회원으로 계속하기</a>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 {% endblock content %}
