--- a/walkings/templates/walkings/test.html
+++ b/walkings/templates/walkings/test.html
@@ -1,26 +1,48 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>주소로 장소 표시하기</title>
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="map-area d-flex">
+  <div id="map" style="width:60%;height:350px;"></div>
+  <div class="form-area d-flex" style="width:40%;">
+    <div class="row">
+      <form id="location-form" action="">
+        <input id="address" type="text">
+        <input type="submit">
+      </form> 
+      <P>주최자 : {{ request.user.username }}</P>
+      <P>멍멍이 이름 : {{ request.user.dog_set.name }}</P>
+      <form id="walking_form" class="" method="post" style="margin: 5rem; width:60%;" >
+        {% csrf_token %}
+        <div>
+          <p id="park_location"></p>
+          <label for="walk_title">모임명</label>
+          <input id="walk_title" type='text' name='title'>
+        </div>
+        <div>
+          <label for="walk_date">모임날짜</label>
+          <input id="walk_date" type='date' name="date" >
+        </div>
+        <div>
+          <label for="walk_cnt">인원수</label>
+          <input id="walk_cnt" type="range" name="membercnt" min="0" max="5">
+        </div>
+        <div>
+          <input id="walk_form_btn" type="submit" onclick="w_create(this)">
+        </div>
+      </form>
 
 
-    
-</head>
-<body>
-<p style="margin-top:-12px">
-    <form id="location-form" action="">
-      <input id="address" type="text">
-      <input type="submit">
-    </form>
-    
-</p>
-<div id="map" style="width:50%;height:350px;"></div>
+    </div>
+  </div>
+</div>
+{% endblock content %}
 
-
+{% block script %}
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5002adb5652b8017c76603959cbbf663&libraries=services"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-  
+  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+//------------------------------------지도 기본 설정--------------------------------------------
   var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = {
         center: new kakao.maps.LatLng(37.512511, 126.939645), // 지도의 중심좌표
@@ -44,13 +66,12 @@
     positions.push(content);
   };
 
-  console.log(positions)
+  // 마커 이미지의 이미지 크기 입니다
   var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png"; 
+  var imageSize = new kakao.maps.Size(24, 35); 
 
   for (var i = 0; i < positions.length; i ++) {
     
-    // 마커 이미지의 이미지 크기 입니다
-    var imageSize = new kakao.maps.Size(24, 35); 
     
     // 마커 이미지를 생성합니다    
     var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize); 
@@ -65,7 +86,7 @@
     });
   
 
-  var iwContent = positions[i].title, // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+  var iwContent = `<button onclick=pick_park(this) data-park-id=${positions[i].park_pk}>같이 산책하기</button>`, // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
     iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
 
   var infowindow = new kakao.maps.InfoWindow({
@@ -74,10 +95,32 @@
   });
 
   // 마커에 클릭이벤트를 등록합니다
-
-
   kakao.maps.event.addListener(marker, 'click', clickListener(map, marker, infowindow));
+
+  function pick_park(e){
+    console.log("공원이름 바꾸기 실행")
+    const park_location = document.querySelector('#park_location')
+    park_location.innerText = '공원이름:' + event.target.dataset.parkId
+    park_location.setAttribute('park-id', `${event.target.dataset.parkId}`)
+    const walking_form = document.querySelector('#walking_form')
+    walking_form.setAttribute('park-id', `${event.target.dataset.parkId}`)
+    const walk_form_btn = document.querySelector('#walk_form_btn')
+    walk_form_btn.setAttribute('data-park-id', `${event.target.dataset.parkId}`)
   }
+  }
+
+//-----------------------------------마커 반복문 종료--------------------------------
+
+function w_create(e){
+  console.log("산책 약속 잡기 실행")
+  const walking_form = document.querySelector('#walking_form')
+  event.preventDefault();
+  axios({
+    method: 'post',
+    url: `/walkings/create/${event.target.dataset.parkId}`,
+    headers: {'X-CSRFToken': csrftoken},
+    data: new FormData(walking_form)
+  })}
 
 function clickListener(map, marker, infowindow) {
     return function() {
@@ -125,7 +168,7 @@ function makeOutListener(infowindow) {
         map.setCenter(coords);
     } 
 });
-});      
+});
 </script>
-</body>
-</html>
+
+{% endblock script %}
