--- a/schedules/templates/schedules/calendar.html
+++ b/schedules/templates/schedules/calendar.html
@@ -1,27 +1,43 @@
 {% extends 'base.html' %}
+{% load django_bootstrap5 %}
 {% load static %}
 
 {% block css %}
   <link href="{% static 'css/cal.css' %}" rel="stylesheet"/>
 {% endblock css %}
-<div class="app sidebar-mini">
-  {% include 'navbar_schedule.html' %}
-  {% include 'aside.html' %}
-</div>
+
 
 {% block content %}
-<main class="app-content">
+<div class="app sidebar-mini">
+  <!-- sub navbar-->
+  <header class="" style="background-color: black;">
+    <!-- Sidebar toggle button-->
+    {% comment %} <a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a> {% endcomment %}
+    <div class="app-sidebar__user">
+      <!-- 프로필 이미지 -->
+      {% comment %} <img class="app-sidebar__user-avatar" src="#" alt="User Image" height="50px" width="50px"/> {% endcomment %}
+      <span>
+          <p class="">유저 아이디</p>
+          <p class="">강아지 이름</p>
+          <a class="" href="{% url 'schedules:calendar' %}"><span class="app-menu__label">Calendar</span></a>
+          <a class="treeview-item" href="{% url 'schedules:running_events' %}"><i class="icon fa fa-circle-o"></i> Running</a>
+          <a class="treeview-item" href="{% url 'schedules:running_events' %}"><i class="icon fa fa-circle-o"></i> Upcoming</a>
+          <a class="treeview-item" href="{% url 'schedules:all_events' %}"><i class="icon fa fa-circle-o"></i> All</a>
+      </span>
+    </div>
+  </header>
+</div>
+<div class="app-content">
   <div class="app-title">
   <div>
       <h1><i class="fa fa-calendar"></i> Calendar</h1>
       <p>Event Calendar</p>
   </div>
   <ul class="app-breadcrumb breadcrumb">
-      <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
       <li class="breadcrumb-item"><a href="#">Calendar</a></li>
   </ul>
-</div>
-</main>
+  </div>
+
 <div class="row">
     <div class="col-md-12">
         <div class="tile row">
@@ -40,9 +56,11 @@
                 </div>
             </div>
             <div class="col-md-9">
-                <div id="calendar"></div>
+              <div id="calendar">{% include 'schedules/aside.html' %}</div>
+              {{ calendar }}
             </div>
 
+          <!-- 이벤트 생성 모달 -->
             <div class="modal fade show" id="eventModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
@@ -83,10 +101,11 @@
         </div>
     </div>
 </div>
+</div>
 {% endblock content %}
 
 {% block script %}
-  <script type="text/javascript" src="{% static 'calender/main.js' %}"></script>
+  <script src="{% static '/js/calendarsMain.js' %}"></script>
   <script>
       document.addEventListener('DOMContentLoaded', function() {
         var calendarEl = document.getElementById('calendar');
