--- a/reviews/templates/reviews/form.html
+++ b/reviews/templates/reviews/form.html
@@ -6,10 +6,25 @@
 <h1>리뷰작성 페이지</h1>
 
 
-<form action="" method="POST" enctype="multipart/form-data">
+<form id="review" method="post" action="" enctype="multipart/form-data">
+ 
     {% csrf_token %}
-    {% bootstrap_form review_form %}
-    {% bootstrap_button button_type="submit" content="리뷰 등록" %}
+
+    <b>{{review_form.title.label}}</b><br />
+    {{review_form.title}}<br />
+
+
+   <b> {{review_form.content.label}}</b> <br />
+   {{review_form.content}}<br />
+
+
+    {{ formset.management_form }}
+    {% for form in formset %}
+        {{ form }}<br />
+    {% endfor %}
+ 
+ 
+    <input type="submit" name="submit" value="Submit" >
 </form>
 
 {% endblock content %}
