--- a/static/CSS/hospital.css
+++ b/static/CSS/hospital.css
@@ -19,6 +19,7 @@
   float: left;
   width: 70%;
   text-align: left;
+  padding-left: 20px;
 }
 .span_h3_ttl2 {
   font-size: 20px ! important;
@@ -88,4 +89,48 @@
   border: 1px solid #333;
   color: #fff;
   font-weight: bold;
+}
+.hospital_search{
+  display: flex;
+  align-items: center;
+  top: -40px;
+  width: 90%;
+  margin: auto;
+  margin-top: 20px;
+  background: #ddd;
+  border-radius: 40px;
+  height: 70px;
+}
+.hospital_search select {
+  font-size: 16px;
+  border-radius: 60px;
+  padding: 12px 20px;
+  width: 15%;
+  border: 1px solid #ddd;
+  background: url(http://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/tour/arrow_search.png) 160px center no-repeat;
+  background-size: 18px;
+  margin: 0 10px 0 10px;
+  appearance: none;
+}
+.hospital_search form {
+  width: 85%;
+}
+.hospital_search input {
+  font-size: 16px;
+  border-radius: 60px;
+  padding: 12px 20px;
+  border: 1px solid #ddd;
+  width: 85%;
+}
+.hospital_search button {
+  width: 10%;
+  margin-top: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  background: #fff;
+  color: #e97723;
+  font-size: 15px;
+  margin-left: 15px;
+  display: inline-block;
+  border: none !important; 
 }
