feat: hospital 페이지 css 수정 + 배너 추가

--- a/info/templates/info/deserted_index.html
+++ b/info/templates/info/deserted_index.html
@@ -9,16 +9,7 @@
 <script>
 
 </script>
-<div class="s21_hospital_m_top pr">
-  <div class="h21_top_cbox pr area">
-    <h3 class=""><span>동물병원</span>안내</h3>
-    <p class="h21_h3_line_c"></p>
-    <p class="h21_h3_text_c">소중한 내반려견 건강을 위해 내 주변 동물병원을 안내해드립니다.</p>
-    <p class="h21_com_t_left pa slide-in-blurred-left"><img src="http://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/hospital/hos_left4.png" alt="강아지"></p>
-    <p class="h21_com_t_right pa slide-in-blurred-right"><img src="http://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/hospital/hos_right3.png" alt="청진기"></p>
-  </div>
-</div>
-<div class="hospital_search area">
+<div class="hospital_search">
   <select name="areaSearch" form="searchfunc1" id="selectCate">
     <option value="전국" {% if areaval == "" %}selected{% endif %}>전국</option>
     <option value="경기" {% if areaval == "경기" %}selected{% endif %}>경기</option>
