--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -4,7 +4,7 @@
 {% load static %}
   <div class="row mt-5">
     <h1 class="text-center">회원가입</h1>
-    <form action="" method="POST" class="my-3">
+    <form action="" method="POST" enctype="multipart/form-data" class="my-3">
       {% csrf_token %}
       {% bootstrap_form form %}
       {% bootstrap_button button_type="submit" button_class="btn-primary" content="가입하기" %}
