--- a/schedules/templates/schedules/event.html
+++ b/schedules/templates/schedules/event.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
-
-{% include 'aside.html' %}
+{% load static %}
+{% block css %}
+  <link href="{% static 'css/cal.css' %}" rel="stylesheet"/>
+{% endblock css %}
 {% block content %}
 <div class="clearfix">
-  <a class="btn btn-info left" href="{% url 'calendarapp:calendar' %}"> Calendar </a>
+  <a class="btn btn-info left" href="{% url 'schedules:calendar' %}"> Calendar </a>
 </div>
 
 <form method="post">
