--- a/schedules/templates/schedules/event_delete.html
+++ b/schedules/templates/schedules/event_delete.html
@@ -1,11 +1,13 @@
-<!-- templates/article_delete.html -->
 {% extends 'base.html' %}
+{% load static %}
+{% block css %}
+  <link href="{% static 'css/cal.css' %}" rel="stylesheet"/>
+{% endblock css %}
 
-{% include 'aside.html' %}
 {% block content %}
-    <h1>Delete</h1>
+    <h1>일정 삭제</h1>
     <form action="" method="post">{% csrf_token %}
-        <p>Are you sure you want to delete this event?</p>
-        <button class="btn btn-danger ml-2" type="submit">Confirm</button>
+        <p>일정을 삭제하시겠습니까?</p>
+        <button class="btn btn-danger ml-2" type="submit">확인</button>
     </form>
 {% endblock content %}
